# agent

./: .gitignore  Cargo.toml  LICENSE  README-jp.md  README-zh.md  README.md  README.md.bak  api.md  build.sh  consolex.py  docker-compose.alpine.yml  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  package.json
desktop-config/pcmanfm/default/: desktop-items-0.conf
docker/desktop/: Dockerfile  Dockerfile.alpine  Dockerfile.dev  startup.dev.sh  startup.sh  startup.sh.bak  supervisord.conf  supervisord.dev.conf
docker/desktop/api-server/: Cargo.toml  christmas_tree_notes.txt
docker/desktop/api-server/src/: lib.rs  main.rs
docker/desktop/desktop-config.bak/: mimeapps.list
docker/desktop/desktop-config.bak/pcmanfm/default/: desktop-items-0.conf
docker/desktop/desktop-config/dconf/: user
docker/desktop/desktop-config/default/: desktop-items-0.conf
docker/desktop/desktop-config/gtk-2.0/: gtkfilechooser.ini
docker/desktop/desktop-config/libreoffice/4/user/: registrymodifications.xcu
docker/desktop/desktop-config/libreoffice/4/user/pack/: registrymodifications.pack
docker/desktop/desktop-config/mutter/: dconf
docker/desktop/desktop-config/pcmanfm/default/: desktop-items-0.conf  pcmanfm.conf
docker/desktop/image/: .bash_history
docker/desktop/image/.config/applications/: pcmanfm.desktop
docker/desktop/image/.config/tint2/: tint2rc
scripts/: generate_tree.sh  package.sh  project_structure.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: Info.plist  docker.rs  docker_manager.rs  main.rs  resources.rs
src-tauri/tests/: api_tests.rs  bash_tests.rs
tests/: api_tests.rs  bash_tests.rs
