[package]
name = "consoley-dev"
version.workspace = true
edition.workspace = true
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-shell = "2"
bollard = "0.18"
futures-util = "0.3"
tar = "0.4"
env_logger = "0.10"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
