[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
actix-web = "4.0"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4.0" 